2002-05-08  Daniel Henninger  <daniel@ncsu.edu>

	* *:
	Creation of new layout and initial functionality.