@@ -1,6 +1,3 @@
-- Dual Auth Support
-	Try Kerberos V5 and then V4 or visa versa.
-
 - Save Creds/Tickets
 	Retrieve and store krbtgt and set env variable of file path.
 
